# mce-lib-azure

./: .coveralls.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
mce_azure/: __init__.py  azure-providers.json  azure-regions.json  core.py  providers.py  regions.py  utils.py
tests/: conftest.py  test_core.py
tests/fixtures/: resource-vm.json  resource_group_list.json  resource_list.json
