[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[tool:pytest]
testpaths = tests
addopts = -p no:warnings --strict-markers --cov=mce_azure --cov-branch

[coverage:run]
source = mce_azure

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[flake8]
max-line-length = 127

